Fix IntelliJ Idea warnings + wrap lines